--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ SECRET_KEY_ALGO="HS256"
 DB_ATLAS="mongodb+srv://mohamedanas7688:p5TMiznnbs9MJ0uJ@cluster0.h2rwtqk.mongodb.net/DBEnrollmentService"
 gmail="mohamed.anas7688@gmail.com"
 EMAIL_PASSWORD="zhokbiuiyrprkiav"
+COURSE_SERVICE_PORT=3000
